to fixup bug with text out of bound

--- a/static/css/task_style.css
+++ b/static/css/task_style.css
@@ -180,3 +180,9 @@ html,body{
 .me{
     background-color: #d99216
 }
+
+.comment h6 {
+    word-wrap: break-word;
+    max-height: 30px;
+    overflow-y: auto;
+}
